# Q-PRISM

./: .gitignore  config.py  logging_setup.py  metrics.py  pyproject.toml  types.py
configs/: base.yaml
configs/experiments/: qprism_cancel_only.yaml  qprism_priority_only.yaml
data/traces/: dc_trace.json  lu_trace.json
scripts/: export_results_csv.py  generate_trace.py  run_variant.py  verify_tc_netem_setup.py
src/qprism/: config.py  eps.py  logging_setup.py  metrics.py  types.py
src/qprism/configs/: base.yaml  logging.yaml  netem_profiles.yaml
src/qprism/configs/experiments/: http2_default.yaml  http3_default.yaml  qprism_full.yaml
src/qprism/data/traces/: mid_west_starbucks.json
src/qprism/experiments/: analysis.py  run.py
src/qprism/logging_sink/: duckdb_logger.py  schema.sql
src/qprism/netem/: controller.py  profiles.py
src/qprism/scheduler/: fairness_gaurd.py  inflight_tracker.py  policy_cancel_only.py  policy_priority_only.py  policy_qprism.py  rings.py
src/qprism/transport/: aioquic_server_shim.py  http2_client.py  http3_client.py  qprism_h3_client.py
src/qprism/transport/clients/: H2_client.py  H3_client.py  H3_util.py  QPRISM_client.py
src/qprism/transport/server_shim/: base_H3_shim.py  default_H3_shim.py  factory.py  mb_tiles_backend.py  mb_tiles_mixin.py  qprism_server.py
src/qprism/viewport/: completeness.py  model.py  traces.py
tests/: test_config_and_logging.py  test_metrics.py  test_netem_and_duckdb.py  test_scheduler.py  test_transport.py  test_viewport_and_tile_requests.py
