[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qprism"
version = "0.2.0"
description = "Q-PRISM: viewport-aware HTTP/3 scheduling experiments for vector tiles"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Isaac Craig" }
]
license = { text = "MIT" }


[tool.hatch.build.targets.wheel]
packages = ["src/qprism"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "tests",
]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.11"
packages = ["qprism"]
mypy_path = "src"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
src_path = true

dependencies = [
  "pyyaml>=6.0",
  "duckdb>=1.0.0",
  "aioquic>=1.2.0",
  "httpx[http2]>=0.27.0",
  "streamlit>=1.38.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12",
  "black>=24.0.0",
  "isort>=5.13.0",
	"hatch"
]


